# pitwall-gpu-broker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  docker-compose.prod.yml  docker-compose.testinfra.yml  docker-compose.yml  pyproject.toml  repomix.config.json
.github/: CODEOWNERS  SECURITY-CI.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  config_question.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release-readiness.yml  release.yml
config/prometheus/: pitwall-cloud-alerts.yml
dashboards/: pitwall-overview.json
db/migrations/: 0001_capabilities.sql  0002_providers.sql  0003_workloads.sql  0004_leases.sql  0005_runpod_templates.sql  0006_kill_log.sql  0007_config_audit.sql  0008_volumes.sql  0009_cost_daily.sql  0010_rate_buckets.sql  0011_workload_cost_columns.sql  0012_alert_events.sql  0013_provider_cooldown_state.sql  0014_async_job_migration.sql  0015_webhook_delivery_failures.sql  0016_drill_entity_type.sql  0017_volume_cost_daily.sql  0018_lease_auto_teardown.sql  0019_lease_mutation_idempotency.sql  0020_webhook_security.sql  0021_retention_runs.sql
docker/: Dockerfile.api  Dockerfile.cost-exporter  Dockerfile.mcp  Dockerfile.reconciler  Dockerfile.webhook
docs/: FEATURE-ROADMAP.md  OPEN-SOURCE-RELEASE-IMPLEMENTATION-PLAN.md  admin-queries.md  capability-matrix.md  compatibility.md  support-matrix.md  webhooks.md
docs/api/: openapi-baseline.json
docs/decisions/: 0001-secure-interface-defaults.md  0002-worker-deferred.md  0003-github-only-ci.md  0004-release-identity-and-channels.md  0005-self-hosted-data-posture.md
docs/legal/: source-provenance-review.md  transitive-license-review.md
docs/operator/: 16-check-audit-procedure.md  create-lb-endpoint.md  create-vllm-endpoint.md  dogfood-acceptance-checklist.md  incident-response.md  release-testing-checklist.md  single-host-equivalent-setup.md  upgrade-recovery.md  user-journey-catalog.md
docs/privacy/: operator-data-handling.md
docs/release/: external-release-gates.md  repository-settings-checklist.md
docs/releases/: v0.1.0a1.md  v0.1.0a2.md
docs/sbom/: pitwall-sbom.cdx.json  pitwall-sbom.md
docs/sdlc/: 00-overview.md  01-architecture.md  02-api-rest.md  03-mcp-server.md  04-routing.md  05-cost-budget.md  06-leases.md  07-data-model-db.md  08-runpod-integration.md  09-webhooks.md  10-reconciler-lifecycle.md  11-rate-limiting.md  12-audit-readiness.md  13-observability.md  14-security.md  15-operations.md  16-core-config.md  17-testing-strategy.md  18-cli.md  19-deployment.md  20-provider-plugins.md  21-autopilot.md  22-recommendations.md  README.md
examples/: verify_webhook.py
scripts/: dogfood_acceptance.py  mutmut_score_gate.py
scripts/release/: cleanup_live_runpod.py  inspect_artifacts.py  run-alpha-readiness.sh  run-user-journeys.sh  smoke_artifacts.py  smoke_compose.sh  validate_candidate.py
seed/: capabilities.yaml  providers.yaml
src/pitwall/: __init__.py  __main__.py  cli.py  cli_output.py  config.py  live.py  migrations.py  models.py  py.typed  r2_staging_cleanup.py  r2_temp_credentials.py  seed.py  staging_store.py  worker.py  workload_lifecycle.py
tests/: __init__.py  conftest.py  test_actual_cost_reconcile.py  test_admin_secret.py  test_aggregate_daily.py  test_api_security_middleware.py  test_audit_sixteen_check.py  test_canonical_gpu_constraints.py  test_capability_api.py  test_config_runtime_env.py  test_core_models.py  test_dashboard_pitwall_overview.py  test_dep_pin_checker.py  test_deprecated_hf_cli_guard.py  test_do_not_port_guards.py  test_dogfood_acceptance.py  test_entrypoint_bind_hosts.py  test_env_coverage.py  test_fakes.py  test_full_cost_path.py  test_health_probe.py  test_inference_routing.py  test_lease_active_readiness.py  test_lease_patch_change_set.py  test_lease_state_transitions.py  test_live.py  test_markdown_links.py  test_migration_discovery.py  test_pipeline_cost_exclusion.py  test_provider_api.py  test_provider_audit_evidence.py  test_provider_validation.py  test_provider_volume_secure_cloud.py  test_public_api.py  test_r2_staging_cleanup.py  test_r2_temp_credentials.py  test_reconcile_query.py  test_rendered_ports.py  test_repo_text_policy_guard.py  test_risk_coverage.py  (+10 more)
tests/admin/: test_kill_switch.py  test_kill_switch_route.py
tests/api/: _contract_helpers.py  _route_helpers.py  test_admin_auth_matrix.py  test_budget_trace.py  test_capabilities_contract.py  test_e2e_async_job_webhook.py  test_e2e_lease_lifecycle.py  test_e2e_sync_inference.py  test_e5_audit_checks.py  test_error_envelope.py  test_handler_latency.py  test_inference_contract.py  test_inference_langfuse.py  test_jobs_contract.py  test_jobs_read_cancel.py  test_leases_contract.py  test_null_byte_hardening.py  test_openai_proxy.py  test_openai_proxy_fallback.py  test_openai_proxy_routes.py  test_openai_proxy_trace.py  test_openapi_compat_policy.py  test_openapi_snapshot.py  test_providers_contract.py  test_route_inventory.py  test_route_precedence.py  test_webhook_subscriptions_contract.py
tests/audit/: test_capability_audit.py  test_rest_audit_mode.py  test_runtime_config.py
tests/autopilot/: test_controller.py  test_import_smoke.py
tests/chaos/: __init__.py  test_db_outage_fail_closed.py  test_idempotent_terminate.py  test_serverless_429.py  test_serverless_5xx.py  test_sse_partial_failure.py  test_volume_attach_hang.py
tests/cli/: __init__.py  test_cli_dispatch.py  test_cli_output.py  test_init_seed.py
tests/config/: test_workload_shape.py
tests/core/: test_async_inference_budget_gate.py  test_idempotency.py  test_sync_inference_lb_budget.py
tests/cost/: test_billing_read.py  test_budget_alerts.py  test_budget_gate.py  test_usage.py  (+12 more)
tools/: benchmark_embedding_latency  smoke_fallback_drill  smoke_kill_drill  smoke_model_council  smoke_openai_proxy  smoke_pitwall_route  smoke_runpod_url
(+430 files in other folders)
